Fix vertical gap before Start Here header

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -58,6 +58,10 @@
   margin: 1rem 0 2rem;
 }
 
+.landing-page > :first-child {
+  margin-top: 0;
+}
+
 .topic-card {
   display: block;
   height: 100%;
